force-app/main/default/objects/QuickbookConfig__c/QuickbookConfig__c.object-meta.xml
<CustomObject>
    <label>QuickbookConfig</label>
    <nameField>
        <displayFormat>QB-{00000000}</displayFormat>
        <label>Quickbook Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickbooksConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>