force-app/main/default/objects/QuickbookConfig__c/fields/refreshToken__c.field-meta.xml
<CustomField>
    <fullName>refreshToken__c</fullName>
    <label>refreshToken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>