force-app/main/default/objects/QuickbookConfig__c/fields/UpdatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDateTime__c</fullName>
    <formula>DATETIMEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UpdatedDateTime</label>
    <type>DateTime</type>
</CustomField>